--- a/backend/public/StyleSheet.css
+++ b/backend/public/StyleSheet.css
@@ -31,6 +31,10 @@ body {
     line-height: 1.5;
 }
 
+.container {
+    padding-left: 10px;
+}
+
 /* =========================
    Text
    ========================= */
